--- a/html/detailtrack.html
+++ b/html/detailtrack.html
@@ -19,13 +19,14 @@
         </header>
         <section>
             <div class="album">
-                <img class="fotoAlbum" src="../img/album4spinetta.jpg" alt="">
-                <p class="nombreAlbum">Nombre del álbum</p>
+                <a href="../html/detailalbum.html"><img class="fotoAlbum" src="../img/album4spinetta.jpg" alt=""></a>
+                <a href="../html/detailalbum.html"><p class="nombreAlbum">Nombre del álbum</p></a>
             </div>
             <div class="info">
                 <h1>Nombre de canción</h1>
-                <h2>Spinetta</h2>
+                <h2> <a class="h2" href="../html/detailartist.html">Spinetta</a></h2>
                 <div class="agregados">
+                    <img class="boton-play" src="../img/play.png" alt="">
                     <p class="duracion">Duración: 5:32s</p>
                     <button>Agregar a tu playlist</button>
                 </div>
