--- a/html/index.html
+++ b/html/index.html
@@ -18,11 +18,12 @@
         <Div class="titulos"><a href="playlist.html">Playlist</a></Div>
     </header>
     <div class="intermedio">
-    <div class="premio">¿Sabías que pasaste 30.000 minutos escuchando música en abril, y que tu artista favorito fue Paulo Londra? </div>
-    <form class="buscador" action="resulados.html" method="GET" >
+        <div class="premio">¿Sabías que pasaste 30.000 minutos escuchando música en abril, y que tu artista favorito fue Paulo Londra? </div>
+        <form class="buscador" action="resulados.html" method="GET" >
             <input type="text" name="search" placeholder="Buscar">
             <button type="sumbit">Buscar</button>
-    </form>
+        </form>
+        <a class="registro" href="registro.html">Inicio de sesión / Registrarse</a>
     </div>
     <div class="Carrusel">
         <div class="FotosCarrusel fade">
