--- a/html/generos.html
+++ b/html/generos.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/generos.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
-
+ 
 </head>
 <body>
     <div class="total">
@@ -40,5 +40,6 @@
         <div class="redesSociales"><img class="facebook" src="../img/facebook.png" alt="facebook"><img class="twitter" src="../img/twitter.png" alt="twitter"><img class="deezer" src="../img/deezer.png" alt="deezer" width="50px"></div>
     </footer>
     </div>
+    <script src="../js/generos.js"></script>
 </body>
 </html>
