--- a/html/index.html
+++ b/html/index.html
@@ -45,7 +45,7 @@
           <a class="antes" onclick="plusSlides(-1)">&#10096;</a>
           <a class="despues" onclick="plusSlides(1)">&#10097;</a>
     </div>
-    <div style="text-align:center">
+    <div style="text-align:center" class="puntos">
         <span class="punto" onclick="currentSlide(1)"></span>
         <span class="punto" onclick="currentSlide(2)"></span>
         <span class="punto" onclick="currentSlide(3)"></span>
