--- a/html/index.html
+++ b/html/index.html
@@ -19,7 +19,7 @@
     </header>
     <div class="intermedio">
         <div class="premio">¿Sabías que pasaste 30.000 minutos escuchando música en abril, y que tu artista favorito fue Paulo Londra? </div>
-        <form class="buscador" action="resulados.html" method="GET" >
+        <form class="buscador" action="resultados.html" method="GET" >
             <input type="text" name="search" placeholder="Buscar">
             <button type="sumbit">Buscar</button>
         </form>
