--- a/html/detailartist.html
+++ b/html/detailartist.html
@@ -11,44 +11,61 @@
 </head>
 <body>
     <div class="total">
-        <a class="arriba" name="arriba"></a>
     <header>
         <div class="logo"><a href="index.html"><img src="../img/logo2.png" width="100px"alt="logo"></a></div>
         <div class="titulos"><a href="index.html">Home</a> </div>
         <div class="titulos"><a href="generos.html">Genres</a> </div>
         <Div class="titulos"><a href="playlist.html">Playlist</a></Div>
     </header>
-    
-    <div class="contenido">
-    <img class="fotospinetta" src="../img/spinettadetail.jpg" alt="spinetta" height="600px">
-    <div class="texto">
+    <section>
+    <div class="arriba">
+    <div class="izquierda">
+        <img class="fotospinetta" src="../img/spinetta.jpg" alt="spinetta">
         <h1>Luis Alberto Spinetta</h1>
-         <h2>Luis Alberto Spinetta (Buenos Aires; 23 de enero de 1950 - Ib.; 8 de febrero de 2012) fue un multifacético artista argentino, cantante, intelectual, guitarrista, poeta, escritor, dibujante, productor discográfico, compositor, considerado uno de los más importantes y respetados músicos en Latinoamérica.</h2>
-         <h2>A lo largo de su carrera ha ganado varios premios, entre los que se destacan los siguientes:
-             <ul>
-                 <li>Premio Konex de Honor 2015: Música Popular</li>
-                 <li>Premio Konex de Platino 2005: Solista Masculino de Rock</li>
-                 <li>Premio Konex de Platino 1995: Cantante Masculino de Rock</li>
-                 <li>
-                    Premio Konex de Platino 1985: Autor / Compositor de Rock</li>
-             </ul>
-         </h2>
-         <h2>Albumes:</h2>
+        <p class="fans">Número de seguidores:</p>
+    </div>
+    <div class="derecha">
+        <h2>Top 5 Canciones Más Escuchadas:</h2>
+        <ul class="canciones">
+            <li class="cancion">
+                <img class="boton-play" src="../img/play.png" alt="">
+                <p class="nombre">Canción 1</p>
+            </li>
+            <li class="cancion">
+                <img class="boton-play" src="../img/play.png" alt="">
+                <p class="nombre">Canción 2</p>
+            </li>
+            <li class="cancion">
+                <img class="boton-play" src="../img/play.png" alt="">
+                <p class="nombre">Canción 3</p>
+            </li>
+            <li class="cancion">
+                <img class="boton-play" src="../img/play.png" alt="">
+                <p class="nombre">Canción 4</p>
+            </li>
+            <li class="cancion">
+                <img class="boton-play" src="../img/play.png" alt="">
+                <p class="nombre">Canción 5</p>
+            </li>
+        </ul>
+    </div>
+    </div>
+    <div class="abajo">
+        <h2>Álbumes:</h2>
         <div class="albumes">
-         <img src="../img/album1spinetta.jpg" alt="album" height="140vh">
-         <img src="../img/album2spinetta.jpg" alt="album" height="140vh">
-         <img src="../img/album3spinetta.jpg" alt="album" height="140vh">
-         <img src="../img/album4spinetta.jpg" alt="album" height="140vh">
-         <img src="../img/album5spinetta.jpg" alt="album" height="140vh">
+         <img class="album" src="../img/album1spinetta.jpg" alt="album" height="140vh">
+         <img class="album" src="../img/album2spinetta.jpg" alt="album" height="140vh">
+         <img class="album" src="../img/album3spinetta.jpg" alt="album" height="140vh">
+         <img class="album" src="../img/album4spinetta.jpg" alt="album" height="140vh">
+         <img class="album" src="../img/album5spinetta.jpg" alt="album" height="140vh">
         </div> 
     </div>
-
-   </div>
-    <a class="arriba" href="#arriba">Go Top</a>
-    <div class = "footer">
+    
+    </section>
+    <footer>
         <div class="AgusLerej">Agustín Lerej | Francisco Iribarne | Agustín Ihidoype</div>
         <div class="deezer"><img src="../img/deezer.png" alt="deezer" width="50px"></div>
-    </div>
+    </footer>
 </div>
 </body>
 </html>
