--- a/html/playlist.html
+++ b/html/playlist.html
@@ -17,7 +17,7 @@
         <div class="titulos"><a href="generos.html">Genres</a> </div>
         <Div class="titulos"><a href="playlist.html">Playlist</a></Div>
     </header>
-    <section class="container">
+
         <div class="Canciones"><h2>Playlist 1</h2>
             <div class="cancion1" >
                 <h3>Cancion 1</h3>
@@ -25,32 +25,12 @@
             <div class="cancion2" >
                 <h3>Cancion 2</h3>
             </div>
-            <div class="cancion3">
+            <div class="cancio3">
                 <h3>Cancion 3</h3>
             </div>
         </div>
-        <div class="Canciones"><h2>Playlist 2</h2>
-            <div class="cancion1" >
-                <h3>Cancion 1</h3>
-            </div>
-            <div class="cancion2" >
-                <h3>Cancion 2</h3>
-            </div>
-            <div class="cancion3">
-                <h3>Cancion 3</h3>
-            </div>
-        </div>
-        <div class="Canciones"><h2>Playlist 3</h2>
-            <div class="cancion1" >
-                <h3>Cancion 1</h3>
-            </div>
-            <div class="cancion2" >
-                <h3>Cancion 2</h3>
-            </div>
-            <div class="cancion3">
-                <h3>Cancion 3</h3>
-            </div>
-        </div>
+        
+
     </section>
     <footer>
         <div class="AgusLerej">Agustín Lerej | Francisco Iribarne | Agustín Ihidoype</div>
