--- a/html/generos.html
+++ b/html/generos.html
@@ -19,23 +19,8 @@
         <Div class="titulos"><a href="playlist.html">Playlist</a></Div>
     </header>
     <h1>GÉNEROS</h1>
-    <div class="generos">
-         <div class="fila">
-           <a href="detailgenre.html"><img class="portadagenero"  src="../img/rock.jpg" alt="rock" height="140vh"></a> 
-           <a href="detailgenre.html"><img class="portadagenero" src="../img/pop.jpg" alt="pop" height="140vh"></a> 
-           <a href="detailgenre.html"><img class="portadagenero" src="../img/jazz.jpg" alt="jazz" height="140vh"></a> 
-           <a href="detailgenre.html"><img class="portadagenero" src="../img/folk.jpg" alt="folk" height="140vh"></a> 
-           <a href="detailgenre.html"><img class="portadagenero" src="../img/rap.jpg" alt="rap" height="140vh"></a> 
-           <a href="detailgenre.html">  <img class="portadagenero" src="../img/metal.jpg" alt="metal" height="140vh"></a> 
-        </div>
-        <div class="fila">
-            <a href="detailgenre.html"><img class="portadagenero" src="../img/rock.jpg" alt="rock" height="140vh"></a> 
-            <a href="detailgenre.html"> <img class="portadagenero" src="../img/pop.jpg" alt="pop" height="140vh"></a> 
-            <a href="detailgenre.html"><img class="portadagenero" src="../img/jazz.jpg" alt="jazz" height="140vh"></a> 
-            <a href="detailgenre.html"> <img class="portadagenero" src="../img/folk.jpg" alt="folk" height="140vh"></a> 
-            <a href="detailgenre.html">  <img class="portadagenero" src="../img/metal.jpg" alt="metal" height="140vh"></a> 
-            <a href="detailgenre.html"> <img class="portadagenero" src="../img/rap.jpg" alt="rap" height="140vh"></div></a> 
-    </div>
+    <div class="generos"> </div>
+
     <footer>
         <div class="AgusLerej">Agustín Lerej | Francisco Iribarne | Agustín Ihidoype</div>
         <div class="redesSociales"><img class="facebook" src="../img/facebook.png" alt="facebook"><img class="twitter" src="../img/twitter.png" alt="twitter"><img class="deezer" src="../img/deezer.png" alt="deezer" width="50px"></div>
