--- a/html/detailalbum.html
+++ b/html/detailalbum.html
@@ -17,6 +17,10 @@
             <div class="titulos"><a href="generos.html">Genres</a> </div>
             <Div class="titulos"><a href="playlist.html">Playlist</a></Div>
         </header>
+        <form class="buscador" action="resultados.html" method="GET" >
+            <input type="text" name="search" placeholder="Buscar">
+            <button type="sumbit">Buscar</button>
+        </form>
         <section>
             <div class="infoAlbum">
                 <h1>Ya no mires atrás</h1>
