--- a/html/detailtrack.html
+++ b/html/detailtrack.html
@@ -17,6 +17,10 @@
             <div class="titulos"><a href="generos.html">Genres</a> </div>
             <Div class="titulos"><a href="playlist.html">Playlist</a></Div>
         </header>
+        <form class="buscador" action="resultados.html" method="GET" >
+            <input type="text" name="search" placeholder="Buscar">
+            <button type="sumbit">Buscar</button>
+        </form>
         <section>
             <div class="album">
                 <a href="../html/detailalbum.html"><img class="fotoAlbum" src="../img/album4spinetta.jpg" alt=""></a>
@@ -28,7 +32,7 @@
                 <div class="agregados">
                     <img class="boton-play" src="../img/play.png" alt="">
                     <p class="duracion">Duración: 5:32s</p>
-                    <button>Agregar a tu playlist</button>
+                    <button class="agregar">Agregar a tu playlist</button>
                 </div>
             </div>
         </section>
