--- a/html/generos.html
+++ b/html/generos.html
@@ -18,7 +18,11 @@
         <div class="titulos"><a href="generos.html">Genres</a> </div>
         <Div class="titulos"><a href="playlist.html">Playlist</a></Div>
     </header>
-    <h1>GÉNEROS</h1>
+    <form class="buscador" action="resultados.html" method="GET" >
+        <input type="text" name="search" placeholder="Buscar">
+        <button type="sumbit">Buscar</button>
+    </form>
+        <h1>GÉNEROS</h1>  
     <div class="generos">
          <div class="fila">
            <a href="detailgenre.html"><img class="portadagenero"  src="../img/rock.jpg" alt="rock" height="140vh"></a> 
