--- a/html/playlist.html
+++ b/html/playlist.html
@@ -17,7 +17,10 @@
         <div class="titulos"><a href="generos.html">Genres</a> </div>
         <Div class="titulos"><a href="playlist.html">Playlist</a></Div>
     </header>
-
+    <form class="buscador" action="resultados.html" method="GET" >
+        <input type="text" name="search" placeholder="Buscar">
+        <button type="sumbit">Buscar</button>
+    </form>
         <div class="Canciones"><h2>Playlist 1</h2>
             <div class="cancion1" >
                 <h3>Cancion 1</h3>
