--- a/html/index.html
+++ b/html/index.html
@@ -18,7 +18,7 @@
         <Div class="titulos"><a href="playlist.html">Playlist</a></Div>
     </header>
     <div class="intermedio">
-        <div class="premio">¿Sabías que pasaste 30.000 minutos escuchando música en abril, y que tu artista favorito fue Paulo Londra? </div>
+        <div class="premio"> <h1>Slakun</h1> </div>
         <form class="buscador" action="resultados.html" method="GET" >
             <input type="text" name="search" placeholder="Buscar">
             <button type="sumbit">Buscar</button>
