--- a/html/detailgenre.html
+++ b/html/detailgenre.html
@@ -22,13 +22,17 @@
             <button type="sumbit">Buscar</button>
         </form>
         <section>
-            <h1>Nombre del género</h1>
+            <h1 class="NombreGenero"></h1>
+            <h2>Top 10 albums</h2>
+            <div class="albumes"></div>
 
         </section>
         <footer>
             <div class="AgusLerej">Agustín Lerej | Francisco Iribarne | Agustín Ihidoype</div>
             <div class="redesSociales"><img class="facebook" src="../img/facebook.png" alt="facebook"><img class="twitter" src="../img/twitter.png" alt="twitter"><img class="deezer" src="../img/deezer.png" alt="deezer" width="50px"></div>
         </footer>
+        
     </div>
+    <script src="../js/detailgenre.js"></script>
 </body>
 </html>
