--- a/html/detailgenre.html
+++ b/html/detailgenre.html
@@ -24,7 +24,7 @@
         <section>
             <h1 class="NombreGenero"></h1>
             <h2>Top 10 albums</h2>
-            <div class="albumes"></div>
+            <div class="artists"></div>
 
         </section>
         <footer>
