--- a/html/detailartist.html
+++ b/html/detailartist.html
@@ -24,9 +24,9 @@
     <section>
     <div class="arriba">
     <div class="izquierda">
-        <img class="fotospinetta" src="../img/spinetta.jpg" alt="spinetta">
-        <h1>Luis Alberto Spinetta</h1>
-        <p class="fans">Número de seguidores:</p>
+        <img class="fotoArtista">
+        <h1></h1>
+        <p class="fans">Número de seguidores: </p>
     </div>
     <div class="derecha">
         <h2>Top 5 Canciones Más Escuchadas:</h2>
@@ -71,5 +71,7 @@
         <div class="redesSociales"><img class="facebook" src="../img/facebook.png" alt="facebook"><img class="twitter" src="../img/twitter.png" alt="twitter"><img class="deezer" src="../img/deezer.png" alt="deezer" width="50px"></div>
     </footer>
 </div>
+
+<script src="../js/detailartist.js"></script>
 </body>
 </html>
