--- a/html/detailtrack.html
+++ b/html/detailtrack.html
@@ -23,12 +23,11 @@
         </form>
         <section>
             <div class="album">
-                <a href="../html/detailalbum.html"><img class="fotoAlbum" src="../img/album4spinetta.jpg" alt=""></a>
-                <a href="../html/detailalbum.html"><p class="nombreAlbum">Nombre del álbum</p></a>
+                
             </div>
             <div class="info">
-                <h1>Nombre de canción</h1>
-                <h2> <a class="h2" href="../html/detailartist.html">Spinetta</a></h2>
+                <h1></h1>
+                <h2> </h2>
                 <div class="agregados">
                     <img class="boton-play" src="../img/play.png" alt="">
                     <p class="duracion">Duración: 5:32s</p>
@@ -41,5 +40,6 @@
             <div class="redesSociales"><img class="facebook" src="../img/facebook.png" alt="facebook"><img class="twitter" src="../img/twitter.png" alt="twitter"><img class="deezer" src="../img/deezer.png" alt="deezer" width="50px"></div>
         </footer>
     </div>
+    <script src="../js/detailtrack.js"></script>
 </body>
 </html>
