--- a/html/detailartist.html
+++ b/html/detailartist.html
@@ -31,37 +31,13 @@
     <div class="derecha">
         <h2>Top 5 Canciones Más Escuchadas:</h2>
         <ul class="canciones">
-            <li class="cancion">
-                <img class="boton-play" src="../img/play.png" alt="">
-                <p class="nombre">Canción 1</p>
-            </li>
-            <li class="cancion">
-                <img class="boton-play" src="../img/play.png" alt="">
-                <p class="nombre">Canción 2</p>
-            </li>
-            <li class="cancion">
-                <img class="boton-play" src="../img/play.png" alt="">
-                <p class="nombre">Canción 3</p>
-            </li>
-            <li class="cancion">
-                <img class="boton-play" src="../img/play.png" alt="">
-                <p class="nombre">Canción 4</p>
-            </li>
-            <li class="cancion">
-                <img class="boton-play" src="../img/play.png" alt="">
-                <p class="nombre">Canción 5</p>
-            </li>
+            
         </ul>
     </div>
     </div>
     <div class="abajo">
-        <h2>Álbumes:</h2>
+        <h2>Top Álbumes:</h2>
         <div class="albumes">
-         <img class="album" src="../img/album1spinetta.jpg" alt="album" height="140vh">
-         <img class="album" src="../img/album2spinetta.jpg" alt="album" height="140vh">
-         <img class="album" src="../img/album3spinetta.jpg" alt="album" height="140vh">
-         <img class="album" src="../img/album4spinetta.jpg" alt="album" height="140vh">
-         <img class="album" src="../img/album5spinetta.jpg" alt="album" height="140vh">
         </div> 
     </div>
     
