--- a/html/detailartist.html
+++ b/html/detailartist.html
@@ -36,7 +36,7 @@
     </div>
     </div>
     <div class="abajo">
-        <h2>Top Álbumes:</h2>
+        <h2>Álbumes más recientes:</h2>
         <div class="albumes">
         </div> 
     </div>
