--- a/html/detailtrack.html
+++ b/html/detailtrack.html
@@ -28,10 +28,11 @@
             <div class="info">
                 <h1></h1>
                 <h2> </h2>
+
+            </div>   
                 <div class="agregados">
-                    <img class="boton-play" src="../img/play.png" alt="">
-                    <p class="duracion">Duración: 5:32s</p>
-                    <button class="agregar">Agregar a tu playlist</button>
+                    
+                    
                 </div>
             </div>
         </section>
