--- a/html/playlist.html
+++ b/html/playlist.html
@@ -21,24 +21,16 @@
         <input type="text" name="search" placeholder="Buscar">
         <button type="sumbit">Buscar</button>
     </form>
-        <div class="Canciones"><h2>Playlist 1</h2>
-            <div class="cancion1" >
-                <h3>Cancion 1</h3>
-            </div>
-            <div class="cancion2" >
-                <h3>Cancion 2</h3>
-            </div>
-            <div class="cancio3">
-                <h3>Cancion 3</h3>
-            </div>
-        </div>
-        
-
+    <section>
+        <h1>Playlist</h1>
+        <ul class="playlistWrapper">
+        </ul>
     </section>
     <footer>
         <div class="AgusLerej">Agustín Lerej | Francisco Iribarne | Agustín Ihidoype</div>
         <div class="redesSociales"><img class="facebook" src="../img/facebook.png" alt="facebook"><img class="twitter" src="../img/twitter.png" alt="twitter"><img class="deezer" src="../img/deezer.png" alt="deezer" width="50px"></div>
     </footer>
+    <script src="../js/playlist.js"></script>
 </div>
 </body>
 </html>
