--- a/html/playlist.html
+++ b/html/playlist.html
@@ -22,7 +22,7 @@
         <button type="sumbit">Buscar</button>
     </form>
     <section>
-        <h1>Playlist</h1>
+        <h1>PLAYLIST</h1>
         <ul class="playlistWrapper">
         </ul>
     </section>
