--- a/html/registro.html
+++ b/html/registro.html
@@ -10,7 +10,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Bienvenido a Slakun!</h1>
+    <header>
+        <a href="index.html"><img class="logo" src="../img/logo2.png" alt="logo"></a>
+        <h1>Bienvenido a Slakun!</h1>
+    </header>
+   
     <h2>Registrate! Sos bienvenido</h2>
     <form action="" method="GET">
         <div class="form-group">
