--- a/html/detailgenre.html
+++ b/html/detailgenre.html
@@ -23,7 +23,7 @@
         </form>
         <section>
             <h1 class="NombreGenero"></h1>
-            <h2>Top 10 albums</h2>
+            <h2>Top 10 artists</h2>
             <div class="artists"></div>
 
         </section>
