--- a/html/detailgenre.html
+++ b/html/detailgenre.html
@@ -22,6 +22,9 @@
             <button type="sumbit">Buscar</button>
         </form>
         <section>
+            <div class="loader">
+                <img src="../img/loading.gif" alt="Loading...">
+            </div>
             <h1 class="NombreGenero"></h1>
             <h2>Top 10 artists</h2>
             <div class="artists"></div>
