--- a/html/generos.html
+++ b/html/generos.html
@@ -24,7 +24,9 @@
     </form>
         <h1>GÉNEROS</h1>  
     <div class="generos">
-         
+        <div class="loader">
+            <img src="../img/loading.gif" alt="Loading...">
+        </div>
     </div>
     <footer>
         <div class="AgusLerej">Agustín Lerej | Francisco Iribarne | Agustín Ihidoype</div>
