--- a/html/resultados.html
+++ b/html/resultados.html
@@ -21,7 +21,11 @@
             <input type="text" name="search" placeholder="Buscar">
             <button type="sumbit">Buscar</button>
         </form>
-        <ul class="lista"></ul>
+        <section class="lista">
+            <div class="loader">
+                <img src="../img/loading.gif" alt="Loading...">
+            </div>
+        </section>
         
         <footer>
             <div class="AgusLerej">Agustín Lerej | Francisco Iribarne | Agustín Ihidoype</div>
