--- a/html/detailartist.html
+++ b/html/detailartist.html
@@ -22,6 +22,9 @@
         <button type="sumbit">Buscar</button>
     </form>
     <section>
+        <div class="loader">
+            <img src="../img/loading.gif" alt="Loading...">
+        </div>
     <div class="arriba">
     <div class="izquierda">
         <img class="fotoArtista">
