--- a/html/registro.html
+++ b/html/registro.html
@@ -10,8 +10,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div class="total">
     <header>
-        <a href="index.html"><img class="logo" src="../img/logo2.png" alt="logo"></a>
+        <a class="granLogo" href="index.html"><img class="logo" src="../img/logo2.png" alt="logo"></a>
         <h1>Bienvenido a Slakun!</h1>
     </header>
    
@@ -32,11 +33,11 @@
                 <option value="ar">Argentina</option>
                 <option value="bo">Bolivia</option>
                 <option value="br">Brasil</option>
-                <option value="ca">Canada</option>
+                <option value="ca">Canadá</option>
                 <option value="cl">Chile</option>
                 <option value="co">Colombia</option>
                 <option value="ec">Ecuador</option>
-                <option value="mx">Mexico</option>
+                <option value="mx">México</option>
                 <option value="pa">Paraguay</option>
                 <option value="ur">Uruguay</option>
                 <option value="ve">Venezuela</option>
@@ -51,5 +52,6 @@
         <div class="AgusLerej">Agustín Lerej | Francisco Iribarne | Agustín Ihidoype</div>
         <div class="redesSociales"><img class="facebook" src="../img/facebook.png" alt="facebook"><img class="twitter" src="../img/twitter.png" alt="twitter"><img class="deezer" src="../img/deezer.png" alt="deezer" width="50px"></div>
     </footer>
+</div>
 </body>
 </html>
