--- a/html/detail.html
+++ b/html/detail.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="../img/logo2.ico.png">
     <link rel="stylesheet" href="../css/detail.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="total">
@@ -15,7 +15,7 @@
     <header>
         <div class="logo"><a href="index.html"><img src="../img/logo2.png" width="100px"alt="logo"></a></div>
         <div class="titulos"><a href="index.html">Home</a> </div>
-        <div class="titulos"><a href="generos.html">Genres</a> </div>
+        <div class="titulos"><a href="generos.html">Generos</a> </div>
         <Div class="titulos"><a href="playlist.html">Playlist</a></Div>
     </header>
     
