--- a/html/playlist.html
+++ b/html/playlist.html
@@ -7,14 +7,14 @@
     <link rel="icon" href="../img/logo2.ico.png">
     <link rel="stylesheet" href="../css/playlist.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="total">
     <header>
         <a href="index.html"><img class="logo" src="../img/logo2.png" alt="logo"></a>
         <div class="titulos"><a href="index.html">Home</a> </div>
-        <div class="titulos"><a href="generos.html">Genres</a> </div>
+        <div class="titulos"><a href="generos.html">Generos</a> </div>
         <Div class="titulos"><a href="playlist.html">Playlist</a></Div>
     </header>
     <form class="buscador" action="resultados.html" method="GET" >
