--- a/html/registro.html
+++ b/html/registro.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="../img/logo2.ico.png">
     <link rel="stylesheet" href="../css/registro.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="total">
