--- a/html/index.html
+++ b/html/index.html
@@ -22,7 +22,7 @@
         <div class="premio"> <h1>Disfrutá de Slakun, la mejor página para reproducir tu música favorita</h1> </div>
         <form class="buscador" action="resultados.html" method="GET" >
             <input type="text" name="search" placeholder="Buscar">
-            <button type="sumbit">Buscar</button>
+            <button class="sumbit" type="sumbit">Buscar</button>
         </form>
         <a class="registro" href="registro.html">Inicio de sesión / Registrarse</a>
     </div>
