--- a/html/index.html
+++ b/html/index.html
@@ -28,19 +28,19 @@
     </div>
     <div class="Carrusel">
         <div class="FotosCarrusel fade">
-            <img src="../img/Beatles.jpg" style="width:100%">
+            <img class="artCarrusel" src="../img/Beatles.jpg" >
             <div class="texto">The Beatles</div>
         </div>
         <div class="FotosCarrusel fade">
-            <img src="../img/RS.jpg" style="width:100%">
+            <img class="artCarrusel" src="../img/RS.jpg" >
             <div class="texto">Rolling Stones</div>
           </div>
           <div class="FotosCarrusel fade">
-            <img src="../img/GnR.jpg" style="width:100%">
+            <img class="artCarrusel" src="../img/GnR.jpg" >
             <div class="texto">Guns n Roses</div>
           </div>
           <div class="FotosCarrusel fade">
-              <img src="../img/Kiss.jpg" alt="">
+              <img class="artCarrusel" src="../img/Kiss.jpg" alt="">
               <div class="texto">Kiss</div>
           </div>
           <a class="antes" onclick="plusSlides(-1)">&#10096;</a>
