--- a/html/registro.html
+++ b/html/registro.html
@@ -11,10 +11,12 @@
 </head>
 <body>
     <div class="total">
-    <header>
-        <a class="granLogo" href="index.html"><img class="logo" src="../img/logo2.png" alt="logo"></a>
-        <h1>Bienvenido a Slakun!</h1>
-    </header>
+        <header>
+            <a href="index.html"><img class="logo" src="../img/logo2.png" alt="logo"></a>
+            <div class="titulos"><a href="index.html">Home</a> </div>
+            <div class="titulos"><a href="generos.html">Generos</a> </div>
+            <Div class="titulos"><a href="playlist.html">Playlist</a></Div>
+        </header>
    
     <h2>Registrate! Sos bienvenido</h2>
     <form action="" method="GET">
@@ -48,10 +50,11 @@
             <button type="submit">Register</button>
         </div>
     </form>
-    <footer>
-        <div class="AgusLerej">Agustín Lerej | Francisco Iribarne | Agustín Ihidoype</div>
-        <div class="redesSociales"><img class="facebook" src="../img/facebook.png" alt="facebook"><img class="twitter" src="../img/twitter.png" alt="twitter"><img class="deezer" src="../img/deezer.png" alt="deezer" width="50px"></div>
-    </footer>
+    
 </div>
+<footer>
+    <div class="AgusLerej">Agustín Lerej | Francisco Iribarne | Agustín Ihidoype</div>
+    <div class="redesSociales"><img class="facebook" src="../img/facebook.png" alt="facebook"><img class="twitter" src="../img/twitter.png" alt="twitter"><img class="deezer" src="../img/deezer.png" alt="deezer" width="50px"></div>
+</footer>
 </body>
 </html>
