--- a/html/index.html
+++ b/html/index.html
@@ -40,7 +40,7 @@
             <div class="texto">Guns n Roses</div>
           </div>
           <div class="FotosCarrusel fade">
-              <img class="artCarrusel" src="../img/Kiss.jpg" alt="">
+              <img class="artCarrusel" src="../img/Kiss.jpg">
               <div class="texto">Kiss</div>
           </div>
           <a class="antes" onclick="plusSlides(-1)">&#10096;</a>
