--- a/html/detailartist.html
+++ b/html/detailartist.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../css/detailartist.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="total">
@@ -43,7 +44,11 @@
         <div class="albumes">
         </div> 
     </div>
-    
+    <div class="related">
+        <h2>Artistas relacionados</h2>
+        <div class="relacionados">
+        </div>
+    </div>
     </section>
     <footer>
         <div class="AgusLerej">Agustín Lerej | Francisco Iribarne | Agustín Ihidoype</div>
