--- a/html/detailartist.html
+++ b/html/detailartist.html
@@ -45,7 +45,7 @@
         </div> 
     </div>
     <div class="related">
-        <h2>Artistas relacionados</h2>
+        <h2>Artistas relacionados:</h2>
         <div class="relacionados">
         </div>
     </div>
